--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -113,20 +113,22 @@
         android:onClick="toggleMenu"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="0.905"
+        map:layout_constraintHorizontal_bias="0.943"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        map:layout_constraintVertical_bias="0.939" />
+        map:layout_constraintVertical_bias="0.961" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/menuOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:background="#BF000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#BF000000">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        map:layout_constraintHorizontal_bias="1.0"
+        map:layout_constraintVertical_bias="0.971">
 
         <ImageButton
             android:id="@+id/avatar"
@@ -147,11 +149,11 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_above="@+id/healthbar"
+            android:layout_marginStart="12dp"
+            android:fontFamily="monospace"
             android:text=""
             android:textColor="#0ddfd8"
-            android:fontFamily="monospace"
             android:textSize="30sp"
-            android:layout_marginStart="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@id/avatar"
@@ -164,13 +166,13 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="180dp"
             android:layout_height="50dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="12dp"
             android:max="100"
             android:progress="50"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/avatar"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.122"
             map:layout_constraintHorizontal_bias="0.913" />
 
@@ -188,11 +190,11 @@
             android:onClick="profileView"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.94"
+            map:layout_constraintHorizontal_bias="0.946"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.58" />
+            map:layout_constraintVertical_bias="0.525" />
 
         <Button
             android:id="@+id/quests"
@@ -204,15 +206,15 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/menu2"
+            android:background="@drawable/questbutton"
             android:onClick="showJob"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.94"
+            map:layout_constraintHorizontal_bias="0.946"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.711" />
+            map:layout_constraintVertical_bias="0.663" />
 
         <Button
             android:id="@+id/inventory"
@@ -228,11 +230,11 @@
             android:onClick="inventoryView"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.94"
+            map:layout_constraintHorizontal_bias="0.946"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.84" />
+            map:layout_constraintVertical_bias="0.791" />
 
         <TextView
             android:id="@+id/profileText"
@@ -246,11 +248,11 @@
             android:textSize="25sp"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.719"
+            map:layout_constraintHorizontal_bias="0.684"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.545" />
+            map:layout_constraintVertical_bias="0.499" />
 
         <TextView
             android:id="@+id/questText"
@@ -264,11 +266,11 @@
             android:textSize="25sp"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.738"
+            map:layout_constraintHorizontal_bias="0.717"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.679" />
+            map:layout_constraintVertical_bias="0.63" />
 
         <TextView
             android:id="@+id/inventoryText"
@@ -282,23 +284,47 @@
             android:textSize="25sp"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
-            map:layout_constraintHorizontal_bias="0.726"
+            map:layout_constraintHorizontal_bias="0.692"
             map:layout_constraintRight_toRightOf="parent"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintVertical_bias="0.806" />
+            map:layout_constraintVertical_bias="0.765" />
 
         <TextView
             android:id="@+id/Qtimer"
-            android:layout_width="120dp"
-            android:layout_height="90dp"
+            android:layout_width="123dp"
+            android:layout_height="71dp"
             android:layout_alignTop="@+id/questText"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_toStartOf="@+id/healthbar"
             android:background="#40efe9e9"
             android:textAllCaps="true"
             android:textSize="40dp"
-            tools:layout_editor_absoluteX="125dp"
-            tools:layout_editor_absoluteY="351dp" />
+            map:layout_constraintBottom_toBottomOf="parent"
+            map:layout_constraintEnd_toEndOf="parent"
+            map:layout_constraintHorizontal_bias="0.157"
+            map:layout_constraintStart_toStartOf="parent"
+            map:layout_constraintTop_toTopOf="parent"
+            map:layout_constraintVertical_bias="0.613" />
+
+        <TextView
+            android:id="@+id/questinfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/com_facebook_button_background_color_focused"
+            map:layout_constraintBottom_toBottomOf="parent"
+            map:layout_constraintEnd_toEndOf="parent"
+            map:layout_constraintHorizontal_bias="0.141"
+            map:layout_constraintStart_toStartOf="parent"
+            map:layout_constraintTop_toTopOf="parent"
+            map:layout_constraintVertical_bias="0.484" />
 
     </android.support.constraint.ConstraintLayout>
 
